--- a/po/it.po
+++ b/po/it.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-04-15 18:44-0400\n"
 "PO-Revision-Date: 2012-01-15 14:26+0100\n"
 "Last-Translator: Stefano Coccato aka BioHazardX <dhamp90@aol.com>\n"
