--- a/po/ang.po
+++ b/po/ang.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: The_Founding_of_Borstep-1.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-04 21:04-0400\n"
 "PO-Revision-Date: 2011-02-21 15:36+0100\n"
