--- a/po/hu.po
+++ b/po/hu.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: The_Founding_of_Borstep-1.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-04 21:04-0400\n"
 "PO-Revision-Date: 2012-04-06 15:38+0100\n"
