--- a/po/hu.po
+++ b/po/hu.po
@@ -6,7 +6,7 @@ msgstr ""
 "PO-Revision-Date: 2012-04-06 15:38+0100\n"
 "Last-Translator: Kelemen Zoltan <kelemen_zoltan@freemail.hu>\n"
 "Language-Team: Hungarian Wesnoth Translation Team\n"
-"Language: \n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
